Home View: avoid wrapping of dates and amounts
Also use class="right" instead align="right" where applicable

--- a/kmymoney/html/kmymoney.css
+++ b/kmymoney/html/kmymoney.css
@@ -89,6 +89,10 @@
         vertical-align: bottom;
     }
 
+    .nowrap {
+        white-space: nowrap;
+    }
+
     th.left, td.left { /*rule to align table header and table data cells*/
         text-align: left;
     }
